// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders inline Form with label correctly 1`] = `
<form
  class="ui-form ui-form-inline"
>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      style="text-align:right"
    >
      类型
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      style="text-align:right"
    >
      来源
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      style="text-align:right"
    />
    <div
      class="ui-form-item-control"
    >
      <button
        class="is-radius za-button za-button--success"
        type="button"
      >
        查询
      </button>
    </div>
  </div>
</form>
`;

exports[`Form renders inline Form with required fields and help correctly 1`] = `
<form
  class="ui-form ui-form-inline"
>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      style="text-align:right"
    >
      类型
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      style="text-align:right"
    >
      <span
        class="ui-form-item-required"
      >
        <i
          class="za-icon za-icon-required theme-default"
        />
      </span>
      来源
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item col-sm-4"
  >
    <label
      style="text-align:right"
    />
    <div
      class="ui-form-item-control"
    >
      <button
        class="is-radius za-button za-button--success"
        type="button"
      >
        查询
      </button>
    </div>
  </div>
</form>
`;

exports[`Form renders normal Form correctly 1`] = `
<form
  class="ui-form ui-form-horizontal"
>
  <div
    class="ui-form-item"
  >
    <label
      style="text-align:right"
    >
      账号
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item"
  >
    <label
      style="text-align:right"
    >
      密码
    </label>
    <div
      class="ui-form-item-control"
    >
      <input
        class="ui-input radius"
        placeholder="请输入..."
        type="text"
      />
    </div>
  </div>
  <div
    class="ui-form-item"
  >
    <div
      class="ui-form-item-control"
    >
      <button
        class="is-radius za-button za-button--success"
        type="button"
      >
        登录
      </button>
    </div>
  </div>
</form>
`;
